--- a/css/layout.css
+++ b/css/layout.css
@@ -4,7 +4,7 @@ body {
 
 :root {
     --gap: 40px;
-    --w-1: calc( (100% - 11 * var(--gap)) / 12 );
+    --w-1: calc( (100% - 12 * var(--gap)) / 12 );
     --w-2: calc( var(--w-1) + var(--gap) + var(--w-1) );
     --w-3: calc( var(--w-2) + var(--gap) + var(--w-1) );
     --w-4: calc( var(--w-3) + var(--gap) + var(--w-1) );
@@ -16,6 +16,18 @@ body {
     --w-10: calc( var(--w-9) + var(--gap) + var(--w-1) );
     --w-11: calc( var(--w-10) + var(--gap) + var(--w-1) );
     --w-12: calc( var(--w-11) + var(--gap) + var(--w-1) );
+
+    --ml-1: calc( var(--w-1) + 1.5 * var(--gap) );
+    --ml-2: calc( var(--w-2) + 1.5 * var(--gap) );
+    --ml-3: calc( var(--w-3) + 1.5 * var(--gap) );
+    --ml-4: calc( var(--w-4) + 1.5 * var(--gap) );
+    --ml-5: calc( var(--w-5) + 1.5 * var(--gap) );
+    --ml-6: calc( var(--w-6) + 1.5 * var(--gap) );
+    --ml-7: calc( var(--w-7) + 1.5 * var(--gap) );
+    --ml-8: calc( var(--w-8) + 1.5 * var(--gap) );
+    --ml-9: calc( var(--w-9) + 1.5 * var(--gap) );
+    --ml-10: calc( var(--w-10) + 1.5 * var(--gap) );
+    --ml-11: calc( var(--w-11) + 1.5 * var(--gap) );
 }
 
 .container {
@@ -42,11 +54,9 @@ body {
         .container > .row > .col-1 {
             display: inline-block;
             float: left;
-            margin-left: var(--gap);
+            margin: 0 calc( var(--gap) / 2 );
         }
-        .container > .row > *:first-child {
-            margin-left: 0;
-        }
+
         .container > .row > .col-12 { width: var(--w-12); }
         .container > .row > .col-11 { width: var(--w-11); }
         .container > .row > .col-10 { width: var(--w-10); }
@@ -60,24 +70,18 @@ body {
         .container > .row > .col-2 { width: var(--w-2); }
         .container > .row > .col-1 { width: var(--w-1); }
 
-/* @media (max-width: 1500px) {
-    .container > .row {
-        width: 1140px;
-        margin: 5px calc(50% - 570px);
-    }
-    .container > .row > .col-xl-12 { width: var(--w-12); }
-    .container > .row > .col-xl-11 { width: var(--w-11); }
-    .container > .row > .col-xl-10 { width: var(--w-10); }
-    .container > .row > .col-xl-9 { width: var(--w-9); }
-    .container > .row > .col-xl-8 { width: var(--w-8); }
-    .container > .row > .col-xl-7 { width: var(--w-7); }
-    .container > .row > .col-xl-6 { width: var(--w-6); }
-    .container > .row > .col-xl-5 { width: var(--w-5); }
-    .container > .row > .col-xl-4 { width: var(--w-4); }
-    .container > .row > .col-xl-3 { width: var(--w-3); }
-    .container > .row > .col-xl-2 { width: var(--w-2); }
-    .container > .row > .col-xl-1 { width: var(--w-1); }
-} */
+        .container > .row > .m-l-1 { margin-left: var(--ml-1); }
+        .container > .row > .m-l-2 { margin-left: var(--ml-2); }
+        .container > .row > .m-l-3 { margin-left: var(--ml-3); }
+        .container > .row > .m-l-4 { margin-left: var(--ml-4); }
+        .container > .row > .m-l-5 { margin-left: var(--ml-5); }
+        .container > .row > .m-l-6 { margin-left: var(--ml-6); }
+        .container > .row > .m-l-7 { margin-left: var(--ml-7); }
+        .container > .row > .m-l-8 { margin-left: var(--ml-8); }
+        .container > .row > .m-l-9 { margin-left: var(--ml-9); }
+        .container > .row > .m-l-10 { margin-left: var(--ml-10); }
+        .container > .row > .m-l-11 { margin-left: var(--ml-11); }
+
 @media (max-width: 1200px) {
     :root {
         --gap: 30px;
@@ -98,6 +102,18 @@ body {
     .container > .row > .col-lg-3 { width: var(--w-3); }
     .container > .row > .col-lg-2 { width: var(--w-2); }
     .container > .row > .col-lg-1 { width: var(--w-1); }
+
+    .container > .row > .m-l-lg-1 { margin-left: var(--ml-1); }
+    .container > .row > .m-l-lg-2 { margin-left: var(--ml-2); }
+    .container > .row > .m-l-lg-3 { margin-left: var(--ml-3); }
+    .container > .row > .m-l-lg-4 { margin-left: var(--ml-4); }
+    .container > .row > .m-l-lg-5 { margin-left: var(--ml-5); }
+    .container > .row > .m-l-lg-6 { margin-left: var(--ml-6); }
+    .container > .row > .m-l-lg-7 { margin-left: var(--ml-7); }
+    .container > .row > .m-l-lg-8 { margin-left: var(--ml-8); }
+    .container > .row > .m-l-lg-9 { margin-left: var(--ml-9); }
+    .container > .row > .m-l-lg-10 { margin-left: var(--ml-10); }
+    .container > .row > .m-l-lg-11 { margin-left: var(--ml-11); }
 }
 @media (max-width: 992px) {
     :root {
@@ -119,6 +135,18 @@ body {
     .container > .row > .col-md-3 { width: var(--w-3); }
     .container > .row > .col-md-2 { width: var(--w-2); }
     .container > .row > .col-md-1 { width: var(--w-1); }
+
+    .container > .row > .m-l-md-1 { margin-left: var(--ml-1); }
+    .container > .row > .m-l-md-2 { margin-left: var(--ml-2); }
+    .container > .row > .m-l-md-3 { margin-left: var(--ml-3); }
+    .container > .row > .m-l-md-4 { margin-left: var(--ml-4); }
+    .container > .row > .m-l-md-5 { margin-left: var(--ml-5); }
+    .container > .row > .m-l-md-6 { margin-left: var(--ml-6); }
+    .container > .row > .m-l-md-7 { margin-left: var(--ml-7); }
+    .container > .row > .m-l-md-8 { margin-left: var(--ml-8); }
+    .container > .row > .m-l-md-9 { margin-left: var(--ml-9); }
+    .container > .row > .m-l-md-10 { margin-left: var(--ml-10); }
+    .container > .row > .m-l-md-11 { margin-left: var(--ml-11); }
 }
 @media (max-width: 768px) {
     :root {
@@ -140,6 +168,18 @@ body {
     .container > .row > .col-sm-3 { width: var(--w-3); }
     .container > .row > .col-sm-2 { width: var(--w-2); }
     .container > .row > .col-sm-1 { width: var(--w-1); }
+
+    .container > .row > .m-l-sm-1 { margin-left: var(--ml-1); }
+    .container > .row > .m-l-sm-2 { margin-left: var(--ml-2); }
+    .container > .row > .m-l-sm-3 { margin-left: var(--ml-3); }
+    .container > .row > .m-l-sm-4 { margin-left: var(--ml-4); }
+    .container > .row > .m-l-sm-5 { margin-left: var(--ml-5); }
+    .container > .row > .m-l-sm-6 { margin-left: var(--ml-6); }
+    .container > .row > .m-l-sm-7 { margin-left: var(--ml-7); }
+    .container > .row > .m-l-sm-8 { margin-left: var(--ml-8); }
+    .container > .row > .m-l-sm-9 { margin-left: var(--ml-9); }
+    .container > .row > .m-l-sm-10 { margin-left: var(--ml-10); }
+    .container > .row > .m-l-sm-11 { margin-left: var(--ml-11); }
 }
 @media (max-width: 576px) {
     .container > .row {
@@ -158,4 +198,16 @@ body {
     .container > .row > .col-xs-3 { width: var(--w-3); }
     .container > .row > .col-xs-2 { width: var(--w-2); }
     .container > .row > .col-xs-1 { width: var(--w-1); }
+
+    .container > .row > .m-l-xs-1 { margin-left: var(--ml-1); }
+    .container > .row > .m-l-xs-2 { margin-left: var(--ml-2); }
+    .container > .row > .m-l-xs-3 { margin-left: var(--ml-3); }
+    .container > .row > .m-l-xs-4 { margin-left: var(--ml-4); }
+    .container > .row > .m-l-xs-5 { margin-left: var(--ml-5); }
+    .container > .row > .m-l-xs-6 { margin-left: var(--ml-6); }
+    .container > .row > .m-l-xs-7 { margin-left: var(--ml-7); }
+    .container > .row > .m-l-xs-8 { margin-left: var(--ml-8); }
+    .container > .row > .m-l-xs-9 { margin-left: var(--ml-9); }
+    .container > .row > .m-l-xs-10 { margin-left: var(--ml-10); }
+    .container > .row > .m-l-xs-11 { margin-left: var(--ml-11); }
   }
