--- a/css/header.css
+++ b/css/header.css
@@ -25,7 +25,6 @@ body {
                 color: white;
                 text-decoration: none;
                 display: inline;
-                padding-left: 12px;
                 line-height: 32px;
             }
             .navigation-bar > div > div > a {
@@ -35,6 +34,7 @@ body {
                 color: #ffffff;
                 display: inline-block;
                 text-transform: uppercase;
+                
                 
             }
             .navigation-bar > nav {
@@ -86,4 +86,25 @@ body {
         }
         .col-12.row.talk {
             margin-top: 30px;
+        }
+
+        li > a {
+            padding: 0px 10px;
+            display: inline-block;     
+        }
+        li {
+
+            
+        }
+        li> a::after {
+            content: '';
+            display: block;
+            width: 0;
+            height: 3px;
+            background-color: white;
+            transition: width .3s;
+        }
+        li>a:hover::after {
+            width: 100%;
+            transition: width .3s;
         }
