--- a/css/services.css
+++ b/css/services.css
@@ -15,48 +15,48 @@
         margin-bottom: 40px;
 }
 
-.bg-light > div > .servicesInfo {
+.servicesInfo {
     background: #ffffff;
-    margin-top: 15px;
-    margin-bottom: 15px;
     font-weight: 400px;
     border-radius: 5px;
-    width: auto;
-    padding: 50px  ;
-    text-align: center;
-    border: 1px solid white;
+    padding: 20px;
+    border: 5px solid white;
     box-shadow: 0px 5px 10px #3b3a3a33;
     cursor: pointer;
-
 }
+
+#servisInfoCol{
+    margin-top: 30px;
+}
+
 .servicesInfo:hover {
     background-color: #ffffff;
     border: 5px solid #f34236;
+    transition: all 1s;
 }
 
-.servicesInfo > div > .fa{
+div > div > div > div> i > .fa{
     color: #f34236;
     text-align: center;
     background-color: #ffffff;
-    font-size: 100px;
-    margin-top: 15px;
-    margin-left: 10px;
+    font-size: 50px;
+    margin: 20px 20px;
+    padding-left: 10px;
 }
 
 .servicesInfo > h3{
        color: black;
-       font-size: 18px;
+       font-size: 20px;
        display: inline-block;
        margin-top: 10px;
 }
 
 .servicesInfo > p {
      color: rgb(130, 130, 130);
-        font-size: 18px;
+        font-size: 15px;
         font-weight: 400;
         line-height: 24px;
         display: inline-block;
-        text-align: left;
+        text-align: center;
         margin-top: 15px;
-        margin-left: 25px;
 }
