--- a/css/services.css
+++ b/css/services.css
@@ -33,6 +33,8 @@
     background-color: #ffffff;
     border: 5px solid #f34236;
     transition: all 1s;
+    position: relative;
+    bottom: 20px;
 }
 
 div > div > div > div> i > .fa{
