--- a/css/header.css
+++ b/css/header.css
@@ -18,9 +18,11 @@ body {
             position: fixed;
             background-color: none;
             box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
+            transition: all 0.5s;
         }
         .navigation-bar.active {
             background-color: white;
+            transition: all 0.5s;
         }
             nav > ul > li, a {
                 font-family: Arial, Helvetica, sans-serif;
