--- a/css/header.css
+++ b/css/header.css
@@ -5,6 +5,9 @@ body {
     margin: 0;
     padding: 0;
 }
+html{
+    scroll-behavior: smooth;
+}
     header {
         background-image: url(../img/home.jpg);
         background-position: center;
