--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,7 +1,8 @@
-body * {font-family: "Poppins", sans-serif;}
+.portfolio *{
+    font-family: "Poppins", sans-serif;
+}
 
 /* Title */
-
     .portfolio > .row > .section-title {
         color: var(--color2);
         position: relative;
@@ -85,7 +86,6 @@ body * {font-family: "Poppins", sans-serif;}
         width: 100%;
     }
 
-
 /* picture gallery */
 
 #gallery {
@@ -95,6 +95,7 @@ body * {font-family: "Poppins", sans-serif;}
     gap: 20px;
 } 
     #gallery > .image {
+        position: relative;
         box-shadow: rgba(58, 78, 95, 0.2) 0 10px 16px, rgba(58, 78, 95, 0.05) 0 -5px 16px;
     }
 
@@ -103,3 +104,174 @@ body * {font-family: "Poppins", sans-serif;}
         height:100%;
         padding: 10px;
     }
+
+    #gallery > .image > .info {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        right: 10px;
+        bottom: 10px;
+        background: rgba(17, 17, 17, 0.4);
+        -moz-transition: ease all 0.55s;
+        -o-transition: ease all 0.55s;
+        -webkit-transition: ease all 0.55s;
+        transition: ease all 0.55s;
+        opacity: 0;
+    }
+
+    #gallery > .image > .info:hover {
+        opacity: 1;
+    }
+
+    #gallery > .image > .info > a {
+        display: inline-block;
+		vertical-align: middle;
+		width: 70px;
+		height: 70px;
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		margin: auto;
+    }
+
+    #gallery > .image > .info > h5 {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        background: var(--color1);
+        font-size: 16px;
+        padding: 20px;
+        margin: 0;
+        font-weight: 500;
+        text-align: center;
+    }
+
+    #gallery > .image > .info > h5 > a {
+        color: #ffffff;
+        text-decoration: none;
+        font-weight: 600;
+    }
+
+    /* modal gallery */
+
+    #myModal {
+        display: none;
+        position: fixed;
+        z-index: 3000;
+        /* padding-top: 100px; */
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+    }
+
+        #myModal > .modal-bg {
+            width: 100%;
+            height: 100%;
+            z-index: 3001;
+            /* overflow: hidden; */
+            position: fixed;
+            background: #0b0b0b;
+            opacity: 0.8;
+            cursor: zoom-out;
+        }
+        /* The Close Button */
+        #myModal > .close {
+            width: 44px;
+            height: 44px;
+            line-height: 44px;
+            color: white;
+            position: absolute;
+            z-index: 3002;
+            right: 0;
+            top: 0;
+            padding: 0 0 18px 10px;
+            opacity: 0.65;
+            font-style: normal;
+            font-size: 28px;
+            font-family: monospace;
+            user-select: none;
+        }
+        
+        #myModal > .close:hover,
+                            .close:focus {
+            opacity: 1;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        #myModal > .close:active {
+            top: 1px;
+        }
+
+        #myModal > .modal-content {
+            display: inline-block;
+            background: green;
+            position: relative;
+            z-index: 3002;
+            left: 0;
+            top: 6vh;
+            box-sizing: border-box;
+        }
+
+            #myModal > .modal-content > .slides {
+                display: inline-block;
+                position: relative;
+                cursor: pointer;
+            }
+    
+                #myModal > .modal-content > .slides > .numbertext {
+                    position: absolute;
+                    user-select: none;
+                    right: 0;
+                    color: #CCC;
+                    font-size: 12px;
+                    line-height: 18px;
+                }
+
+                #myModal > .modal-content > .slides > img {
+                    max-height: 88vh;
+                    max-width: 100%;
+                    user-select: none;
+                }
+        
+        #myModal > button {
+            position: absolute;
+            background: transparent;
+            border: none;
+            font-size: 30px;
+            z-index: 3002;
+            top: 50%;
+            color: #fff;
+            opacity: 0.65;
+            touch-action: manipulation;
+            width: 50px;
+            height: 50px;
+            cursor: pointer;
+            user-select: none;
+            /* top: 0; */
+            /* left: 0; */
+        }
+
+        #myModal > button:hover {
+            opacity: 1;
+        }
+
+        #myModal > button:focus {
+            outline:0;
+        }
+
+        #myModal > button:active {
+            top: 50.2%;
+        }
+
+        #myModal > .arrow-left {
+            left: 0;
+        }
+
+        #myModal > .arrow-right {
+            right: 0;
+        }
