--- a/css/header.css
+++ b/css/header.css
@@ -22,6 +22,7 @@ html{
             background-color: none;
             box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
             transition: all 0.5s;
+            z-index: 1;
         }
         .navigation-bar.active {
             background-color: white;
