My services css recorect & layout 57, 58 corect

--- a/css/layout.css
+++ b/css/layout.css
@@ -54,7 +54,8 @@ body {
         .container > .row > .col-1 {
             display: inline-block;
             float: left;
-            margin: 0 calc( var(--gap) / 2 );
+            margin-right: calc( var(--gap) / 2 );
+            margin-left: calc( var(--gap) / 2 );
         }
 
         .container > .row > .col-12 { width: var(--w-12); }
